Update index.html (title of head)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainpour</title>
+    <title>kr-social-contact</title>
     <style>
         body, html {
             margin: 0;
